2006-06-24 10:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Remove swappedObjects
	ivar and also remove from -init and -dealloc in GormNibWrapperLoader.

2006-06-24 10:22 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Use the "classes" map properly in
	-[GormNibWrapperLoader loadWrapperFile:withDocument:].
	* main.m: Correct comment.

2006-06-23 00:57 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormGModelWrapperLoader.m: call 
	-[NSDocument updateChangeCount:] to 
	clear changes so that the document isn't flagged as needing
	to be saved right after load.
	* GormCore/GormNibWrapperLoader.m: Use the objects in the map
	returned by -names in -loadFileWrapper:withDocument:.

2006-06-18 14:40 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Added filter to remove
	NSIBHelpConnector instances from the connections array.

2006-06-17 20:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Remove resizing change from
	loadFileWrapper:withDocument: since it was moved to NSWindowTemplate
	nibInstantiate.

2006-06-17 12:45 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInternalViewEditor.m: Removed previous resize
	in activate method.
	* GormCore/GormNibWrapperLoader.m: Code to properly resize the 
	window after loading.

2006-06-17 10:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomView.m: Return self in the conditional that
	reads the custom view.
	* GormCore/GormInternalViewEditor.m: Reset the current view size
	so that the window is properly displayed.
	* Palettes/1Windows/GormNSWindow.m: Send deferred as "NO" always.

2006-06-17 06:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Added code to clear changes
	so that the nib loads without showing the document as changed.